# HepB-Adhere

./: README.md
hepb-adhere-ussd-sms/: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
hepb-adhere-ussd-sms/.github/: copilot-instructions.md
hepb-adhere-ussd-sms/backend/: .env.example  Dockerfile  alembic.ini  requirements.txt
hepb-adhere-ussd-sms/backend/app/: main.py
hepb-adhere-ussd-sms/backend/app/api/v1/: __init__.py  deps.py
hepb-adhere-ussd-sms/backend/app/api/v1/routes/: patients.py  sms.py  ussd.py
hepb-adhere-ussd-sms/backend/app/core/: config.py  logging.py  security.py
hepb-adhere-ussd-sms/backend/app/db/: session.py
hepb-adhere-ussd-sms/backend/app/models/: patient.py
hepb-adhere-ussd-sms/backend/app/schemas/: patient.py
hepb-adhere-ussd-sms/backend/app/services/: twilio_client.py  ussd_session.py
hepb-adhere-ussd-sms/backend/app/tasks/: worker.py
hepb-adhere-ussd-sms/backend/app/tests/: test_routes.py
hepb-adhere-ussd-sms/docs/: architecture.md
hepb-adhere-ussd-sms/frontend/: Dockerfile
hepb-adhere-ussd-sms/frontend/web/: package-lock.json  package.json
hepb-adhere-ussd-sms/frontend/web/public/: index.html
hepb-adhere-ussd-sms/frontend/web/src/: App.tsx
hepb-adhere-ussd-sms/frontend/web/src/components/: Dashboard.tsx
hepb-adhere-ussd-sms/frontend/web/src/services/: api.ts
