[tool.poetry]
name = "hepb-adhere-ussd-sms"
version = "0.1.0"
description = "Hepatitis B adherence USSD + SMS system"
authors = ["kolawole <kolawoleolari@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95"
uvicorn = {extras = ["standard"], version = "^0.22"}
structlog = "^23.2.0"
prometheus-client = "^0.15.0"
sentry-sdk = "^1.23.0"

[tool.poetry.dev-dependencies]
black = "^24.1.0"
ruff = "^0.12.0"
pytest = "^7.3"
pre-commit = "^3.4"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = ["py311"]
